[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multitask-dit-policy"  # Multi-Task Diffusion Policy
version = "0.1.0"
description = "Multi-Task Diffusion Transformer (DiT) Policy for robot learning"
readme = "README.md"
authors = [
    { name="Bryson Jones", email="bkjones97@gmail.com" },
]
requires-python = ">=3.12"  # Holding to the LeRobot Python version for simplicity
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.15.0",
    "transformers>=5.4.0,<6.0.0",
    "diffusers>=0.34.0,<0.36.0",
    "timm>=1.0.20,<1.1.0",
    "safetensors>=0.4.3,<1.0.0",
    "draccus==0.10.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.20.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pyyaml>=6.0",
    "lerobot>=0.5.0", 
    "einops>=0.8.0",
    "wandb>=0.16.0",
    "typing_extensions>=4.5.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

modal = [
    "modal>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enable a comprehensive set of linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"

